--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "react_boilerplate",
   "version": "0.1.0",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Faris-AH/react-ninja.git"
+  },
+  "keywords": [
+    "create-react-app",
+    "redux",
+    "ant",
+    "design"
+  ],
+  "author": "Faris Bin Abdul Hameed <faris.hameed@hotmail.com>",
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -30,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Faris-AH/react-ninja/issues"
+  },
+  "homepage": "https://github.com/Faris-AH/react-ninja#readme"
 }
